Fix TE correct & distractor markers don't line up with radio buttons
PT Story: https://www.pivotaltracker.com/story/show/180414126

[#180414126]

This fixes a bug viewable only in Firefox where Teacher Edition correct and distractor markers for multiple choice questions didn't line up correctly with their associated radio buttons.

--- a/src/multiple-choice/components/runtime.scss
+++ b/src/multiple-choice/components/runtime.scss
@@ -18,6 +18,7 @@ legend.prompt {     // clear bootstrap stuff
 
   &.vertical {
     div {
+      align-items: flex-start;
       display: flex;
     }
   }
